add crudl operations for game entity
